--- a/java-features/pom.xml
+++ b/java-features/pom.xml
@@ -14,33 +14,43 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <maven_compiler_plugin>3.5.1</maven_compiler_plugin>
-        <jdk>1.8</jdk>
+        <jdk.version>1.8</jdk.version>
 
-        <junit>4.12</junit>
+        <junit.vsersion>4.12</junit.vsersion>
+        <lombok.version>1.16.18</lombok.version>
     </properties>
 
     <dependencies>
+
         <!-- junit start -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit}</version>
+            <version>${junit.vsersion}</version>
             <scope>test</scope>
         </dependency>
         <!-- junit end -->
+
+        <!-- lombok start -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+        <!-- lombok end -->
+
     </dependencies>
     <build>
         <finalName>galsang-java-features</finalName>
         <pluginManagement>
             <plugins>
-                <!-- maven_compiler_plugin -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven_compiler_plugin}</version>
                     <configuration>
-                        <source>${jdk}</source>
-                        <target>${jdk}</target>
+                        <source>${jdk.version}</source>
+                        <target>${jdk.version}</target>
                         <encoding>${maven.compiler.encoding}</encoding>
                     </configuration>
                 </plugin>
