--- a/java-features/pom.xml
+++ b/java-features/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.galsang.java.features</groupId>
-    <artifactId>galsang-java-features</artifactId>
+    <artifactId>java-features</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>galsang-java-features</name>
+    <name>java-features</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -41,7 +41,7 @@
 
     </dependencies>
     <build>
-        <finalName>galsang-java-features</finalName>
+        <finalName>java-features</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
