--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,33 @@
     <packaging>pom</packaging>
     <name>java</name>
     <url>http://maven.apache.org</url>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <maven_compiler_plugin>3.5.1</maven_compiler_plugin>
+        <jdk.version>1.8</jdk.version>
+        <lombok.version>1.16.18</lombok.version>
+    </properties>
+
+    <dependencies>
+
+        <!-- junit start -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <!-- junit end -->
+
+        <!-- lombok start -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+        <!-- lombok end -->
+
+    </dependencies>
 
     <modules>
         <module>java-base</module>
